--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "stream-chat": "^5.1.2",
+    "stream-chat-react": "^6.12.2",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
